--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -27,7 +27,7 @@
         <div id="Catalog">
 
             <form th:action="@{/login}" method="post">
-                <p>Please enter your username and password.</p>
+                <p>Please enter your username and password. LEE ROSALES</p>
                 <p>
                     Username:<input name="username" /> <br />
                     Password:<input type="password" name="password" />
