--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -109,8 +109,8 @@
 <div id="Footer">
 
     <div id="PoweredBy">
-        <a href="http://kazuki43zoo.com" target="homepage">
-            kazuki43zoo.com
+        <a href="http://dxc.technology" target="homepage">
+            dxc.technology
         </a>
     </div>
 
